force-app/main/default/objects/Customer__c/fields/Final_Bill_After_Tax__c.field-meta.xml
<CustomField>
    <fullName>Final_Bill_After_Tax__c</fullName>
    <formula>Monthly_Bill__c  * 0.86</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Bill After Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>