force-app/main/default/objects/Customer__c/fields/Selected_Plan__c.field-meta.xml
<CustomField>
    <fullName>Selected_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Plan</label>
    <referenceTo>Internet_Plan_Object__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>